# AI-Chatbot

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/crud/: document_crud.py
backend/app/db/: database.py
backend/app/models/: document.py
backend/app/routers/: upload_router.py
backend/app/schemas/: document_schema.py
backend/app/services/: qa_service.py  qa_service2.py  qa_service_default.py
backend/app/utils/: pdf_parser.py
backend/app/vector_store/: chromadb_store.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: Logo.avif
frontend/src/: App.jsx  index.css
frontend/src/components/: DocumentSelectorModal.jsx  UploadModal.jsx
frontend/src/components/chat/: ChatHistory.jsx  ChatInputBar.jsx  MessageBubble.jsx
frontend/src/components/layout/: ChatLayout.jsx  Header.jsx
frontend/src/components/ui/: Avatar.jsx  Button.jsx  IconButton.jsx  Spinner.jsx
frontend/src/services/: api.js
